--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies for requirements and testing
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+          if [ -f requirement.txt ]; then pip install -r requirement.txt; fi
+          if [ -f requirement_dev.txt ]; then pip install -r requirement_dev.txt; fi
       - name: Test with pytest
         run: |
           pytest --cov src test/ --cov-fail-under=75
