fixed: 	  modify configuration file with a new bot token.

--- a/config/config-default.yml
+++ b/config/config-default.yml
@@ -1,6 +1,6 @@
 prefix: "$"
 
-token: "MTAwMzA3NDU4NzQ3MjQ0MTM5NA.G6evC6.hy2iEUOB9N1GQFZn0TD7oA_fZV7F2353ho9qfo"
+token: "MTAwMzA3NDU4NzQ3MjQ0MTM5NA.GgDE4F.ehA1KQkWPZeJz4fjf-2fTjZdaoITV3nYNHdahI"
 
 google_token: "AIzaSyDrw6XvXQbcYfHQWW54GHL3Us0Fj7IrkBA"
 
