fixed: 	Insert new token and fixed file git ignore.

--- a/config/config-default.yml
+++ b/config/config-default.yml
@@ -1,6 +1,6 @@
 prefix: "$"
 
-token: "MTAwMzA3NDU4NzQ3MjQ0MTM5NA.GgDE4F.ehA1KQkWPZeJz4fjf-2fTjZdaoITV3nYNHdahI"
+token: "MTAwMzA3NDU4NzQ3MjQ0MTM5NA.GBE9ja.D9O7eCmbPESZ6CSNahXm5a-9LJc7f85vvhf7U0"
 
 google_token: "AIzaSyDrw6XvXQbcYfHQWW54GHL3Us0Fj7IrkBA"
 
